# file-finder

./: .gitignore  Makefile  README.md  pyproject.toml
file_finder/: cli.py  find.py  search.py  ux.py
file_finder/tests/: test_ux.py
resources/yara/: big-numbers.yar  crypto-signatures.yar  dll-files.yar  msi-files.yar  pe-files.yar
